--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ compiler:
   - gcc
 before_install:
  - sudo apt-get update
- - sudo apt-get install libgtest-dev
+ - sudo apt-get install libgtest-dev libboost-dev
  - "cd /usr/src/gtest && sudo cmake . && sudo cmake --build . && sudo mv libg* /usr/local/lib/ ; cd -"
 script: "make test"
 notifications:
