--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
  - sudo apt-get update
  - sudo apt-get install libgtest-dev libboost-dev
  - "cd /usr/src/gtest && sudo cmake . && sudo cmake --build . && sudo mv libg* /usr/local/lib/ ; cd -"
-script: "make test"
+script: "make DEBUG=1 test"
 notifications:
   recipients:
     - alessandro.pezzato@gmail.com
