--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: cpp
 compiler:
   - gcc
+  - clang
 before_install:
  - sudo apt-get update
  - sudo apt-get install libgtest-dev libboost-dev
