--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ compiler:
   - gcc
   - clang
 before_install:
- - sudo apt-get update
- - sudo apt-get install libgtest-dev libboost-dev
+ - sudo add-apt-repository ppa:ukplc-team/testing -y 
+ - sudo apt-get update -qq 
+ - sudo apt-get install -qq libboost1.49-dev libgtest-dev
  - "cd /usr/src/gtest && sudo cmake . && sudo cmake --build . && sudo mv libg* /usr/local/lib/ ; cd -"
 script: "make DEBUG=1 test"
 notifications:
